# photoorg02

./: Cargo.toml  README.md
src/: copypressm.rs  fromdirpressm.rs  get_fromdirlistm.rs  main.rs  todirpressm.rs
